Default language command, encoding issue